--- a/21.css
+++ b/21.css
@@ -66,3 +66,16 @@ main p{
     background-color: gray;
     color: black;
 }
+@media(max-width:600px){
+    #cont{
+        width: 80%;
+    }
+    header h1{
+       
+        font-size: 3rem;
+      
+    }
+    header img{
+        width: 70%;
+    }
+}
